maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:47: error: 'while' expected but identifier found.
			sommeAngle = 0
                        ^Escaper:48: error: '(' expected but '}' found.
		}else{
                ^